...
    <string name="description_text">Description *</string>
    <string name="title_field">Title</string>
    <string name="date_field">Date</string>
    <string name="time_field">Pick a time</string>
    <string name="location_field">Location</string>
    <string name="description_field">Description</string>
    <string name="tag_text">Tags (optional)</string>
    <string name="tag_field">Tags</string>
    <string name="price_field">Price</string>
    <string name="price_text">Price (optional)</string>
    <string name="price_place_holder">Entry price:</string>
    <string name="pick_location_on_map">Pick location on map</string>
    <string name="capacity_field">Capacity</string>
...
